--- a/packages/forml/src/global.css
+++ b/packages/forml/src/global.css
@@ -4,7 +4,17 @@ body > main {
 }
 
 h1 {
+	font-size: 1.5rem;
+	text-align: center;
+	text-transform: uppercase;
 	margin-bottom: 4rem;
+}
+
+h3 {
+	font-size: 1.5rem;
+	text-align: center;
+	padding: 0 2rem;
+	margin-bottom: 2rem;
 }
 
 nav {
@@ -12,7 +22,8 @@ nav {
 }
 
 .formio-wizard-nav-container {
-	margin-top: 3rem;
+	margin-top: 4rem;
+	justify-content: center;
 }
 
 .pagination {
