--- a/packages/forml/src/components/Breadcrumbs.module.css
+++ b/packages/forml/src/components/Breadcrumbs.module.css
@@ -1,6 +1,6 @@
 .breadcrumbs {
 	font-size: smaller;
-	padding: .75rem;
+	padding: .75rem 0;
 	border: 1px solid #ccc;
 	border-radius: .25rem;
 	width: 100%;
