Add modal dialog for adding household members
Add support for editGrid and customize the household member table.
Show the labels for the day component as placeholders instead.
Allow an asterisk to be put on a placeholder to define the field as required.
Use placeholders as a fallback for creating a key.

--- a/packages/forml/src/global.css
+++ b/packages/forml/src/global.css
@@ -56,3 +56,14 @@ nav {
 		grid-area: error;
 	}
 }
+
+.household-member-row {
+	align-items: center;
+
+	em {
+		color: #888;
+		font-size: smaller;
+		font-style: normal;
+		display: block;
+	}
+}
