--- a/packages/forml/src/global.css
+++ b/packages/forml/src/global.css
@@ -1,3 +1,7 @@
+body {
+	background-color: #f6f6f6;
+}
+
 body > main {
 	margin: 5rem auto;
 	max-width: 30rem;
@@ -13,4 +17,301 @@ nav {
 
 .formio-wizard-nav-container {
 	margin-top: 3rem;
+}
+
+.wizard-page .col-form-label {
+	box-sizing: border-box;
+	color: rgb(34, 34, 34);
+	cursor: auto;
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 600;
+	letter-spacing: 1.6px;
+	line-height: 19.25px;
+	margin-bottom: 8px;
+	margin-top: 0px;
+	text-transform: uppercase
+}
+
+.wizard-page .col-form-label p{
+	font-size: .8125rem;
+	line-height: 1.25;
+	color: #767676;
+	margin-bottom: 16px !important;
+	margin-top: 0;
+	cursor: auto;
+	font-style: normal;
+	font-weight: 400;
+	text-transform: none;
+}
+.formio-component-textfield label, 
+.formio-component-day .row .col label {
+ display: none;
+}
+
+.formio-component-fieldSet,
+.formio-component-day,
+.formio-component-email {
+	padding: 20px 40px 0px 40px;
+}
+
+.formio-component-checkbox {
+	padding: 0px 40px 40px 40px;
+}
+
+.form-control::placeholder {
+	color: #767676;
+	opacity: 0.5;
+	background-color: #f9f9f9;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #ccc;
+	box-shadow: none;
+	display: block;
+	font-family: inherit;
+	font-size: 1rem;
+	height: 2.8125rem;
+	margin: 0 0 1.25rem;
+	padding: .625rem;
+	width: 100%;
+	box-sizing: border-box;
+	transition: border-color .15s linear,background .15s linear;
+	border-radius: 4px;
+	cursor: auto;
+	font-style: normal;
+	font-weight: 400;
+  }
+
+.form-check-label, .form-check-input {
+	cursor: pointer;
+}
+
+.form-check-input {
+	/* appearance: none; */
+	/* -webkit-appearance: none; */
+	display: flex;
+	align-content: center;
+	justify-content: center;
+	font-size: 2rem;
+	padding: 0.1rem;
+	border: 0.25rem;
+	border-radius: 0.5rem;
+}
+
+.form-check-label {
+	font-size: .875rem;
+	line-height: 1.375;
+	font-weight: 600 !important;  
+	color: #0077da;
+}
+
+header.you-header {
+	padding-top: 1rem;
+	padding-right: 2rem;
+	padding-left: 2rem;
+	padding-bottom: 0;
+	border-bottom: 1px solid #dedee0;
+	margin-top: 0;
+}
+
+.you-header h2 {
+	font-size: 1.375rem;
+	line-height: 1.25;
+	text-align: center;
+	font-family: "Droid Serif",Georgia,Times,serif;
+	font-weight: 400;
+	box-sizing: border-box;
+	cursor: auto;
+	font-style: normal;
+	color: #222;
+}
+
+nav[id$="-header"] {
+	border: 1px solid #dedee0;
+	border-radius: .5rem;
+	background: #fff;
+	padding: 40px;
+	margin-bottom: 1rem;
+}
+
+.wizard-page {
+	border: 1px solid #dedee0;
+	border-radius: .5rem;
+	background: #fff;
+}
+
+.field-required::after {
+	display: none;
+}
+
+.yourName-box, .email-box {
+	display: flex;
+	flex-direction: column;
+}
+
+.dob-box {
+	display: flex;
+}
+
+.form-group {
+	margin-bottom: 1rem;
+	cursor: auto;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  color: #222;
+
+}
+
+.border-bottom {
+	border-bottom: 1px solid #dedee0;
+}
+
+
+.no-email-checkbox-label {
+	color: #0077da;
+	margin-left: 10px;
+}
+
+.form-label {
+	text-transform: uppercase;
+	letter-spacing: .1rem;
+	font-size: .875rem;
+	line-height: 1.375;
+	font-weight: 600 !important;
+	margin-bottom: .5rem;
+}
+
+.app-card_question {
+	padding-top: 1rem;
+	font-size: 1.375rem;
+	line-height: 1.25;
+	text-align: center;
+	font-weight: 400;
+	margin-top: 0;
+	margin-bottom: 1rem;
+	box-sizing: border-box;
+	cursor: auto;
+	font-style: normal;
+	color: #222;
+}
+
+h2 {
+	font-family: "Droid Serif",Georgia,Times,serif;
+	font-weight: 400;
+	margin-top: 0;
+	margin-bottom: 1rem;
+}
+
+h3 {
+	font-family: "Open Sans",Helvetica,Arial,Verdana,sans-serif;
+}
+
+.text-input {
+	margin: 0 0 1.25rem;
+	border-radius: 4px;
+	-moz-appearance: none;
+	background-color: #f9f9f9;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #ccc;
+	box-shadow: none;
+	color: rgba(0,0,0,0.75);
+	display: block;
+	font-family: inherit;
+	font-size: 1rem;
+	height: 2.8125rem;
+	margin: 0 0 1.25rem;
+	padding: .625rem;
+	width: 100%;
+	box-sizing: border-box;
+	transition: border-color .15s linear,background .15s linear;
+}
+
+.form-note {
+	font-size: .8125rem;
+	line-height: 1.25;
+	color: #767676;
+}
+
+.app-card {
+	background: #fff;
+	border-radius: 10px;
+	border: 1px solid #dedee0;
+    border-radius: .5rem;
+}
+
+.app-inner {
+	padding-top: 1rem;
+	padding-right: 2rem;
+	padding-left: 2rem;
+	padding-bottom: 0;
+}
+
+.form-group-date {
+	float: left;
+	clear: none;
+	margin-right: 1rem;
+	width: 4rem;
+}
+
+.form-group-text-area {
+	margin: 0 0 1.25rem;
+}
+
+.form-control:focus,
+input[type="checkbox"]:focus {
+	box-shadow: 0 0 0 2px #fff,0 0 3px 4px #00bed5;
+}
+
+.formio-error-wrapper {
+	background-color: #0000;
+	padding: 0px;
+}
+
+.alert-box {
+	background-color: #e31c3d;
+	color: #fff;
+	border-color: #c31834;
+	line-height: 1.375;
+  	padding-right: 2.5rem;
+	margin: 0 !important;
+	border-style: solid;
+	border-width: 0;
+	display: block;
+	font-size: .875rem;
+	font-weight: 400;
+	padding: .875rem 1.875rem .875rem .875rem;
+	position: relative;
+	transition: opacity 300ms ease-out;
+	font-family: "Open Sans",Helvetica,Arial,Verdana,sans-serif;
+	cursor: auto;
+	font-style: normal;
+	box-sizing: border-box;
+}
+
+.alert-body {
+	margin-bottom: 0px;
+}
+
+.button-link, .close:hover {
+	color: #fff;
+	line-height: .9rem;
+	right: .5rem;
+	background: inherit;
+	font-size: 1.375rem;
+	margin-top: -.6875rem;
+	opacity: .3;
+	padding: 0 6px 4px;
+	position: absolute;
+	top: 50%;
+	border-width: 0;
+	display: inline;
+	letter-spacing: normal;
+	margin-bottom: 0;
+	text-transform: none;
+	border-radius: 0;
+	font-family: "Open Sans",Helvetica,Arial,Verdana,sans-serif;
+	font-weight: 400 !important;
+	text-align: left;
 }
